--- a/composer.json
+++ b/composer.json
@@ -24,26 +24,25 @@
         "symfony/swiftmailer-bundle": "dev-master",
         "symfony/monolog-bundle": "dev-master",
         "sensio/distribution-bundle": "dev-master",
-        "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0",
+        "sensio/framework-extra-bundle": "dev-master",
+        "incenteev/composer-parameter-handler": "dev-master",
 	    "friendsofsymfony/rest-bundle": "dev-master",
-	    "jms/serializer": "dev-master",
 	    "willdurand/hateoas-bundle": "dev-master",
         "jms/serializer-bundle": "dev-master",
         "hautelook/templated-uri-bundle": "dev-master",
 	    "pagerfanta/pagerfanta": "dev-master",
 	    "simple-bus/symfony-bridge": "dev-master",
 	    "simple-bus/doctrine-orm-bridge": "dev-master",
-        "league/tactician-bundle": "^0.4.0",
-        "league/tactician-command-events": "^0.6.0",
-        "ramsey/uuid-doctrine": "^1.2",
-        "nelmio/cors-bundle": "^1.4",
-        "league/pipeline": "^0.2.2"
+        "league/tactician-bundle": "dev-master",
+        "league/tactician-command-events": "dev-master",
+        "ramsey/uuid-doctrine": "dev-master",
+        "nelmio/cors-bundle": "dev-master",
+        "league/pipeline": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "dev-master",
 	    "sebastian/resource-operations": "dev-master",
-        "phpunit/phpunit": "5.7.x-dev",
+        "phpunit/phpunit": "dev-master",
 	    "behat/behat": "dev-master",
         "phpspec/phpspec": "dev-master",
 	    "phpspec/prophecy": "dev-master",
