--- a/deployment/php/php.ini
+++ b/deployment/php/php.ini
@@ -1865,6 +1865,9 @@ ldap.max_links = -1
 ; Set it to 0 to allow all operations
 ;xsl.security_prefs = 44
 
+opcache.validate_permission = 1
+opcache.validate_root = 1
+
 ; Local Variables:
 ; tab-width: 4
 ; End:
