--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
         "nelmio/alice": "dev-master",
 	    "ralfmaxxx/behat_multidimensional_extension": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "theofidry/alice-data-fixtures": "dev-master"
+        "theofidry/alice-data-fixtures": "dev-master",
+        "symfony/var-dumper": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
