--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
@@ -9,14 +9,16 @@ RiftRunBundle\Model\Post:
                 name: player_id
                 referencedColumnName: id
                 nullable: true
+                onDelete: CASCADE
             fetch: LAZY
-            cascade: [ persist ]
+            cascade: [ persist]
         query:
             targetEntity: SearchQuery
             joinColumn:
                 name: searchquery_id
                 referencedColumnName: id
                 nullable: true
+                onDelete: CASCADE
             fetch: LAZY
             cascade: [ persist ]
     id:
