--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
@@ -7,6 +7,7 @@ RiftRunBundle\Model\SearchQuery:
             joinColumn:
                 name: gametype_id
                 referencedColumnName: id
+                onDelete: CASCADE
             fetch: EAGER
             cascade: [ persist ]
     oneToMany:
@@ -14,7 +15,7 @@ RiftRunBundle\Model\SearchQuery:
             targetEntity: CharacterType
             mappedBy: searchQuery
             fetch: EAGER
-            cascade: [ persist ]
+            cascade: [ persist, remove, merge ]
     repositoryClass: RiftRunBundle\ORM\Repository\SearchQueryRepository
     id:
             id:
