Working on tests.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "autoload-dev": {
         "psr-4": {
             "Test\\Integration\\Context\\" : "test/integration/contexts/",
-            "Test\\Integration\\Specification\\" : "test/integration/specification/"
+            "Test\\Integration\\Specification\\" : "test/integration/specification/",
+            "Test\\Integration\\Helpers\\" : "test/integration/helpers"
         }
     },
     "repositories": [
