--- a/test/integration/behat.yml
+++ b/test/integration/behat.yml
@@ -14,6 +14,7 @@ default:
                     commandBus: '@tactician.commandbus.default'
                 - Test\Integration\Context\ChaosMonkeyContext:
                     doctrine: '@doctrine'
+                    commandBus: '@tactician.commandbus.default'
         # get:
         #     contexts:
         #         - Test\Integration\Context\FeatureContext
