--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "league/tactician-command-events": "dev-master",
         "ramsey/uuid-doctrine": "dev-master",
         "nelmio/cors-bundle": "dev-master",
-        "league/pipeline": "dev-master"
+        "league/pipeline": "dev-master",
+        "league/tactician-doctrine": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "dev-master",
