--- a/test/Fixtures/DatabaseSeeder/Character/monks_x10.yml
+++ b/test/Fixtures/DatabaseSeeder/Character/monks_x10.yml
@@ -1,6 +1,6 @@
 include:
     - template.yml
 
-RiftRunBundle\Model\Character:
+App\Model\Character:
     monks{1..10} (extends character):
         type: 'monk'
