--- a/test/Fixtures/DatabaseSeeder/CharacterType/charactertype_x10.yml
+++ b/test/Fixtures/DatabaseSeeder/CharacterType/charactertype_x10.yml
@@ -1,6 +1,5 @@
 include:
     - template.yml
 
-RiftRunBundle\Model\CharacterType:
+App\Model\CharacterType:
     charactertype{1..10} (extends charactertype): []
-        #searchQuery: @searchqueries1()>
