--- a/test/Fixtures/DatabaseSeeder/SearchQuery/searchquery_x10.yml
+++ b/test/Fixtures/DatabaseSeeder/SearchQuery/searchquery_x10.yml
@@ -1,7 +1,7 @@
 include:
     - template.yml
 
-RiftRunBundle\Model\SearchQuery:
+App\Model\SearchQuery:
     searchqueries{1..10} (extends searchquery):
         __construct: [<{minParagon}>, @grifts<current()>, <{createdAt}>]
         lookingFor: ['@characterclasses<current()>']
