--- a/conf/config.yml
+++ b/conf/config.yml
@@ -21,6 +21,9 @@ framework:
     validation:
         enabled: true
         enable_annotations: false
+        mapping:
+            paths:
+                - '%kernel.root_dir%/../conf/validation'
     #serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
@@ -93,11 +96,11 @@ jms_serializer:
         debug: '%kernel.debug%'
         file_cache:
             dir: '%kernel.cache_dir%/jms_serializer'
-        auto_detection: true
+        auto_detection: false
         directories:
             RiftRun:
-                namespace_prefix: 'App\\DTO'
-                path: '%kernel.root_dir%/conf/serializer/'
+                namespace_prefix: 'App\DTO'
+                path: '%kernel.root_dir%/../conf/serializer'
 
 bazinga_hateoas:
     metadata:
