--- a/test/Fixtures/DatabaseSeeder/Character/template.yml
+++ b/test/Fixtures/DatabaseSeeder/Character/template.yml
@@ -7,6 +7,6 @@ parameters:
     gameType: "softcore"
 #    createdAt: <dateTime($max = 'now')>
     #createdAt: <dateTimeBetween("-200 days", "now")>
-RiftRunBundle\Model\Character:
+App\Model\Character:
     character (template):
         __construct: ['monk', '<numberBetween(70, 1000)>', "#11111", "EU", "false", "softcore", '<dateTimeBetween("-200 days", "now")>']
