--- a/test/Fixtures/DatabaseSeeder/Post/post_x10.yml
+++ b/test/Fixtures/DatabaseSeeder/Post/post_x10.yml
@@ -5,24 +5,23 @@ include:
     - ../GameType/grift_template.yml
     - ../SearchQuery/template.yml
 
-RiftRunBundle\Model\Character:
+App\Model\Character:
     monks{1..10} (extends character): []
-#        __construct: ['monk', <{paragonPoints}>, <{battleTag}>, <{region}>, <{seasonal}>, <{gameType}>, <{createdAt}>]
 
-RiftRunBundle\Model\CharacterType:
+App\Model\CharacterType:
     charactertypes{1..10} (extends charactertype):
         __construct: [<{type}>]
         searchQuery: '@searchqueries<current()>'
 
-RiftRunBundle\Model\Grift:
+App\Model\Grift:
     grifts{1..10} (extends grift):
         __construct: [<{level}>]
 
-RiftRunBundle\Model\SearchQuery:
+App\Model\SearchQuery:
     searchqueries{1..10} (extends searchquery):
         __construct: ['<numberBetween(70, 1000)>', '@grifts<current()>', '<dateTime("now")>']
 #        __construct: [<{minParagon}>, '@grifts<current()>', <{createdAt}>]
 
-RiftRunBundle\Model\Post:
+App\Model\Post:
     posts{1..10} (extends post):
         __construct: ['@monks<current()>', '@searchqueries<current()>', "<dateTimeBetween('-26 days', 'now')>"]
