--- a/test/Fixtures/DatabaseSeeder/monks.yml
+++ b/test/Fixtures/DatabaseSeeder/monks.yml
@@ -1,6 +1,6 @@
 include:
     - template.yml
 
-RiftRunBundle\Model\Character:
+App\Model\Character:
     monks{1..100} (extends character):
         type: 'monk'
