--- a/test/Fixtures/DatabaseSeeder/wizards_10.yml
+++ b/test/Fixtures/DatabaseSeeder/wizards_10.yml
@@ -1,6 +1,6 @@
 include:
     - template.yml
 
-RiftRunBundle\Model\Character:
+App\Model\Character:
     wizards{1..10} (extends character):
         type: 'wizard'
