--- a/conf/config.yml
+++ b/conf/config.yml
@@ -15,7 +15,7 @@ framework:
     secret:          "%secret%"
     router:
         resource: '%kernel.root_dir%/../conf/routing.yml'
-        strict_requirements: ~
+        strict_requirements: true
     form:            ~
     csrf_protection: ~
     validation:
@@ -24,7 +24,7 @@ framework:
         mapping:
             paths:
                 - '%kernel.root_dir%/../conf/validation'
-    #serializer:      { enable_annotations: true }
+    serializer:      { enable_annotations: false }
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
