--- a/conf/services.yml
+++ b/conf/services.yml
@@ -4,6 +4,9 @@ parameters:
 #    parameter_name: value
 
 services:
+    _defaults:
+        public: false
+
     standard_orm_purger:
         class: Doctrine\Common\DataFixtures\Purger\ORMPurger
 
@@ -13,6 +16,7 @@ services:
             - '@nelmio_loader_factory'
         tags:
             - { name: tactician.handler, command: App\Command\Commands\LoadFixtures }
+        public: true
 
     clear_fixtures_command_handler:
         class: App\Command\Handlers\DatabaseClearCommandHandler
@@ -21,6 +25,7 @@ services:
             - '@standard_orm_purger'
         tags:
             - { name: tactician.handler, command: App\Command\Commands\ClearDatabase }
+        public: true
 
     load_fixtures_cli:
         class: App\Cli\DatabaseSeederCommand
@@ -48,6 +53,7 @@ services:
             - '@form.factory'
         tags:
             - { name: tactician.handler, command: App\CommandBus\Commands\CreatePost }
+        public: true
 
     # QueryBuilder Specification
     all_posts_specification:
@@ -60,11 +66,13 @@ services:
             - '@doctrine'
             - '@jms_serializer'
             - '@pager_fanta_factory'
+        public: true
 
     fetch_post_service:
         class: App\Services\PostQueryService
         arguments:
             - '@doctrine'
+        public: true
 
     # Helper
 #    form_errors_helper:
