--- a/conf/dev/config.yml
+++ b/conf/dev/config.yml
@@ -17,13 +17,15 @@ monolog:
             type:   stream
             path:   "%kernel.logs_dir%/%kernel.environment%.log"
             level:  debug
+            channels: ['!event']
         console:
             type:   console
             bubble: false
             verbosity_levels:
                 VERBOSITY_VERBOSE: INFO
                 VERBOSITY_VERY_VERBOSE: DEBUG
-            channels: ["!doctrine"]
+            process_psr_3_messages: false
+            channels: ['!event', '!doctrine', '!console']
         console_very_verbose:
             type:   console
             bubble: false
@@ -31,7 +33,13 @@ monolog:
                 VERBOSITY_VERBOSE: NOTICE
                 VERBOSITY_VERY_VERBOSE: NOTICE
                 VERBOSITY_DEBUG: DEBUG
-            channels: ["doctrine"]
+            channels: ['doctrine', 'event', 'console' ]
+        # To follow logs in real time, execute the following command:
+        # `bin/console server:log -vv`
+        server_log:
+            type:   server_log
+            process_psr_3_messages: false
+            host: 0:9911
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
         #firephp:
