--- a/conf/config.yml
+++ b/conf/config.yml
@@ -122,27 +122,12 @@ tactician:
                 - tactician.middleware.doctrine
                 - tactician.middleware.command_handler
 
+# Nelmio CORS
 nelmio_cors:
-        defaults:
-            allow_credentials: false
-            allow_origin: []
-            allow_headers: []
-            allow_methods: []
-            expose_headers: []
-            max_age: 0
-            hosts: []
-            origin_regex: false
-        paths:
-            '^/v1/':
-                allow_origin: ['*']
-                #allow_origin: ['^http://localhost:[0-9]+', '^http://fa.local', '^http://fa.local/', '^http://riftrun.local+']
-                allow_headers: ['Content-Type']
-                allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
-                max_age: 3600
-#            '^/':
-#                origin_regex: true
-#                allow_origin: ['^http://localhost:[0-9]+']
-#                allow_headers: ['X-Custom-Auth']
-#                allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
-#                max_age: 3600
-#                hosts: ['^api\.']
+    defaults:
+        allow_origin:  ['http://localhost']
+        allow_methods: ["POST", "PUT", "GET", "DELETE", "OPTIONS"]
+        allow_headers: ["content-type", "authorization"]
+        max_age:       3600
+    paths:
+        '^/': ~
