Added first new services.

--- a/conf/services/common.yml
+++ b/conf/services/common.yml
@@ -1,9 +1,10 @@
 services:
-  riftrun.abstract.repository:
-    abstract: true
-    factory: ['@doctrine.orm.entity_manager', 'getRepository']
-    public: false
+    riftrun.abstract.repository:
+        abstract: true
+        factory: ['@doctrine.orm.default_entity_manager', 'getRepository']
+        public: false
 
-  riftrun.abstract.form_factory:
-    abstract: true
-    arguments: ['@form.factory']
+    riftrun.abstract.form_factory:
+        abstract: true
+        arguments:
+           - '@form.factory'
