--- a/conf/services.yml
+++ b/conf/services.yml
@@ -1,8 +1,4 @@
-## Learn more about services, parameters and containers at
-## http://symfony.com/doc/current/book/service_container.html
 parameters:
-#    parameter_name: value
-
 services:
     _defaults:
         public: false
@@ -63,3 +59,14 @@ services:
         class: App\Factories\AliceLoaderFactory
         arguments:
             - '@fidry_alice_data_fixtures.doctrine.persister_loader'
+
+    # =========== Split into separate files ========== #
+    riftrun.abstract.repository:
+        abstract: true
+        factory: ['@doctrine.orm.default_entity_manager', 'getRepository']
+        public: false
+
+    riftrun.abstract.form_factory:
+        abstract: true
+        arguments:
+           - '@form.factory'
