--- a/conf/doctrine/riftrun/Post.orm.yml
+++ b/conf/doctrine/riftrun/Post.orm.yml
@@ -1,36 +1,37 @@
 App\Model\Post:
     type: entity
     table: posts
-    repositoryClass: App\Infrastructure\Post\PostRepository
-    oneToOne:
-        player:
-            targetEntity: Character
-            joinColumn:
-                name: player_id
-                referencedColumnName: id
-                nullable: true
-                onDelete: CASCADE
-            fetch: LAZY
-            cascade: [ persist, remove]
-            orphanRemoval: true
-        query:
-            targetEntity: SearchQuery
-            joinColumn:
-                name: searchquery_id
-                referencedColumnName: id
-                nullable: true
-                onDelete: CASCADE
-            fetch: LAZY
-            cascade: [ persist, remove ]
-            orphanRemoval: true
+    repositoryClass: App\Infrastructure\Post\Repository\PostRepository
+#    oneToOne:
+#        player:
+#            targetEntity: Character
+#            joinColumn:
+#                name: player_id
+#                referencedColumnName: id
+#                nullable: true
+#                onDelete: CASCADE
+#            fetch: LAZY
+#            cascade: [ persist, remove]
+#            orphanRemoval: true
+#        query:
+#            targetEntity: SearchQuery
+#            joinColumn:
+#                name: searchquery_id
+#                referencedColumnName: id
+#                nullable: true
+#                onDelete: CASCADE
+#            fetch: LAZY
+#            cascade: [ persist, remove ]
+#            orphanRemoval: true
     id:
-            id:
-                type: uuid
-                id: true
-                generator:
-                    strategy: CUSTOM
-                customIdGenerator:
-                    class: Ramsey\Uuid\Doctrine\UuidGenerator
+        id:
+            type: postId
+            id: true
+            nullable: false
+#          generator:
+#            strategy: CUSTOM
+#            customIdGenerator:
+#           class: Ramsey\Uuid\Doctrine\UuidGenerator
     fields:
         createdAt:
             type: datetimetz
