--- a/conf/config.yml
+++ b/conf/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: 'parameters.yml' }
     - { resource: 'security.yml' }
     - { resource: 'services.yml' }
+    - { resource: 'services/services.yml' }
     - { resource: 'doctrine_extensions.yml' }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
