--- a/conf/doctrine/gamemode/AbstractGameMode.orm.yml
+++ b/conf/doctrine/gamemode/AbstractGameMode.orm.yml
@@ -10,7 +10,7 @@ App\Domain\GameMode\Model\AbstractGameMode:
         grift: App\Domain\GameMode\Model\Grift
         rift: App\Domain\GameMode\Model\Rift
     embedded:
-        type:
+        gameMode:
             class: App\Domain\GameMode\ValueObject\GameType
     cascade: [ persist, remove ]
     id:
@@ -18,6 +18,4 @@ App\Domain\GameMode\Model\AbstractGameMode:
             type: gameModeId
             id: true
             nullable: false
-            generator:
-                strategy: UUID
     lifecycleCallbacks: {  }
