--- a/conf/doctrine/searchquery/SearchQuery.orm.yml
+++ b/conf/doctrine/searchquery/SearchQuery.orm.yml
@@ -1,21 +1,21 @@
 App\Domain\SearchQuery\Model\SearchQuery:
     type: entity
     table: searchquery
-#    oneToOne:
-#        game:
-#            targetEntity: GameType
-#            joinColumn:
-#                name: gametype_id
-#                referencedColumnName: id
-#                onDelete: CASCADE
-#            fetch: EAGER
-#            cascade: [ persist ]
-#    oneToMany:
-#        characterType:
-#            targetEntity: CharacterType
-#            mappedBy: searchQuery
-#            fetch: EAGER
-#            cascade: [ persist, remove, merge ]
+    oneToOne:
+        game:
+            targetEntity: App\Domain\GameMode\Model\AbstractGameMode
+            joinColumn:
+                name: gametype_id
+                referencedColumnName: id
+                onDelete: CASCADE
+            fetch: EAGER
+            cascade: [ persist ]
+    oneToMany:
+        playerCharacter:
+            targetEntity: App\Domain\PlayerCharacter\Model\PlayerCharacter
+            mappedBy: searchQuery
+            fetch: EAGER
+            cascade: [ persist, remove, merge ]
 #    repositoryClass: App\ORM\Repository\SearchQueryRepository
     id:
         id:
